--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 aenum==3.1.15
 aiohttp==3.9.1
 aiosignal==1.3.1
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/altgraph-0.17.2-py2.py3-none-any.whl
 annotated-types==0.6.0
 asgiref==3.7.2
+async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.2
+Brotli==1.1.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 Deprecated==1.2.14
@@ -12,10 +15,13 @@ dj-database-url==2.1.0
 Django==4.2.13
 frozenlist==1.4.1
 future==0.18.3
+gunicorn==22.0.0
 idna==3.6
 line-bot-sdk==3.7.0
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
 multidict==6.0.4
 numpy==1.26.3
+packaging==24.0
 pandas==2.1.4
 psycopg2-binary==2.9.9
 pydantic==2.5.3
@@ -30,6 +36,6 @@ sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2023.4
 urllib3==2.1.0
+whitenoise==6.6.0
 wrapt==1.16.0
 yarl==1.9.4
-gunicorn
