--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ dj-database-url==2.1.0
 Django==4.2.13
 frozenlist==1.4.1
 future==0.18.3
-gunicorn==19.7.1
+gunicorn
 idna==3.6
 line-bot-sdk==3.7.0
 macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
